--- a/styles/temples.css
+++ b/styles/temples.css
@@ -68,11 +68,11 @@ figure {
     padding: 1rem;
 }
 
-h1 {
+h1, h2 {
 	font-size: 2rem;
 }
 
-.page {
+h2 {
     padding-top: 4rem;
     display: flex;
     justify-content: center;
