W03 Assignment: Country Page done

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -9,7 +9,7 @@ body {
 }
 
 body {
-	font-family: "Sansita", sans-serif;
+	font-family: "EB Garamond", serif;
     background-color: rgb(123, 255, 134);
 }
 
