--- a/project/styles/main-large.css
+++ b/project/styles/main-large.css
@@ -6,10 +6,12 @@
 		font-size: 20px;
 	}
 
+
 	section {
 		background-color: #4545456a;
 		max-width: 50%;
 		padding: 50px;
+		margin-top: 300px;
 	}
 
 	section h2 {
