--- a/project/styles/contact.css
+++ b/project/styles/contact.css
@@ -51,7 +51,7 @@ h1 {
 
 .navigation a {
 	display: block;
-	color: var(--accent-color);
+	color: var(--primary-color);
 	padding: 0.75rem;
 	text-decoration: none;
 	text-align: center;
